--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,44 @@
+@Article{Harris2020,
+author={Harris, Charles R.
+and Millman, K. Jarrod
+and van der Walt, St{\'e}fan J.
+and Gommers, Ralf
+and Virtanen, Pauli
+and Cournapeau, David
+and Wieser, Eric
+and Taylor, Julian
+and Berg, Sebastian
+and Smith, Nathaniel J.
+and Kern, Robert
+and Picus, Matti
+and Hoyer, Stephan
+and van Kerkwijk, Marten H.
+and Brett, Matthew
+and Haldane, Allan
+and del R{\'i}o, Jaime Fern{\'a}ndez
+and Wiebe, Mark
+and Peterson, Pearu
+and G{\'e}rard-Marchant, Pierre
+and Sheppard, Kevin
+and Reddy, Tyler
+and Weckesser, Warren
+and Abbasi, Hameer
+and Gohlke, Christoph
+and Oliphant, Travis E.},
+title={Array programming with NumPy},
+journal={Nature},
+year={2020},
+month={Sep},
+day={01},
+volume={585},
+number={7825},
+pages={357-362},
+abstract={Array programming provides a powerful, compact and expressive syntax for accessing, manipulating and operating on data in vectors, matrices and higher-dimensional arrays. NumPy is the primary array programming library for the Python language. It has an essential role in research analysis pipelines in fields as diverse as physics, chemistry, astronomy, geoscience, biology, psychology, materials science, engineering, finance and economics. For example, in astronomy, NumPy was an important part of the software stack used in the discovery of gravitational waves1 and in the first imaging of a black hole2. Here we review how a few fundamental array concepts lead to a simple and powerful programming paradigm for organizing, exploring and analysing scientific data. NumPy is the foundation upon which the scientific Python ecosystem is constructed. It is so pervasive that several projects, targeting audiences with specialized needs, have developed their own NumPy-like interfaces and array objects. Owing to its central position in the ecosystem, NumPy increasingly acts as an interoperability layer between such array computation libraries and, together with its application programming interface (API), provides a flexible framework to support the next decade of scientific and industrial analysis.},
+issn={1476-4687},
+doi={10.1038/s41586-020-2649-2},
+url={https://doi.org/10.1038/s41586-020-2649-2}
+}
+
 @Article{Hunter:2007,
   Author    = {Hunter, J. D.},
   Title     = {Matplotlib: A 2D graphics environment},
