Add PFB reference

--- a/paper.bib
+++ b/paper.bib
@@ -53,3 +53,15 @@ url={https://doi.org/10.1038/s41586-020-2649-2}
   doi       = {10.1109/MCSE.2007.55},
   year      = 2007
 }
+
+@incollection{David N. Burrows:2021,
+  author      = "David N. Burrows",
+  title       = "Spectrometers and Polyphase Filterbanks in Radio Astronomy",
+  editor      = "David N. Burrows",
+  booktitle   = "The WSPC Handbook of Astronomical Instrumentation",
+  publisher   = "World Scientific",
+  series      = "World Scientific Series in Astrophysics",
+  year        = 2021,
+  volume     = 1,
+  doi       = {10.1142/9446}
+}
