Fix author on pfb citation

--- a/paper.bib
+++ b/paper.bib
@@ -54,8 +54,8 @@ url={https://doi.org/10.1038/s41586-020-2649-2}
   year      = 2007
 }
 
-@incollection{David N. Burrows:2021,
-  author      = "David N. Burrows",
+@incollection{Danny C. Price:2021,
+  author      = "Danny C. Price",
   title       = "Spectrometers and Polyphase Filterbanks in Radio Astronomy",
   editor      = "David N. Burrows",
   booktitle   = "The WSPC Handbook of Astronomical Instrumentation",
