Change PFB type to book

--- a/paper.bib
+++ b/paper.bib
@@ -54,7 +54,7 @@ url={https://doi.org/10.1038/s41586-020-2649-2}
   year      = 2007
 }
 
-@incollection{Price:2021,
+@Book{Price:2021,
   author      = "Danny C. Price",
   title       = "Spectrometers and Polyphase Filterbanks in Radio Astronomy",
   editor      = "David N. Burrows",
