Add gnuradio reference year again

--- a/paper.bib
+++ b/paper.bib
@@ -68,6 +68,7 @@ url={https://doi.org/10.1038/s41586-020-2649-2}
 
 @misc{gnuradio,
   author = {TBD},
+  year = {2020},
   title = {GNU Radio – the Free and Open Software Radio Ecosystem},
   publisher = {GitHub},
   journal = {GitHub repository},
