Add SDR reference

--- a/paper.bib
+++ b/paper.bib
@@ -71,6 +71,16 @@ url={https://doi.org/10.1038/s41586-020-2649-2}
   publisher   = "World Scientific",
   series      = "World Scientific Series in Astrophysics",
   year        = 2021,
-  volume     = 1,
-  doi       = {10.1142/9446}
+  volume      = 1,
+  doi         = {10.1142/9446}
+}
+
+@Book{Dillinger:2003,
+  author      = "Markus Dillinger, Kambiz Madani, Nancy Alonistioti",
+  booktitle   = "Software Defined Radio: Architectures, Systems and Functions",
+  publisher   = "John Wiley & Sons",
+  series      = "Wiley Series in Software Radio",
+  year        = 2003,
+  volume      = 1,
+  isbn={0470851643}
 }
