Add WOLA reference

--- a/paper.bib
+++ b/paper.bib
@@ -1,10 +1,12 @@
-@misc{gnuradio,
-  author = {TBD},
-  year = {2020},
-  title = {GNU Radio – the Free and Open Software Radio Ecosystem},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-  url = {https://github.com/gnuradio/gnuradio}
+@book{10.5555/524660,
+author = {Rabiner, Lawrence R.},
+title = {Multirate Digital Signal Processing},
+year = {1996},
+isbn = {0136051626},
+publisher = {Prentice Hall PTR},
+address = {USA},
+edition = {1st},
+abstract = {From the Publisher:This title is no longer being mass-produced. It is now being printed on demand by the publisher. While this process keeps information readily available, the print quality of these books is generally that of a copier and not of a normal book. This is a copy of the original book. Intended for a one-semester advanced graduate course in digitalsignal processing or as a reference for practicing engineers andresearchers.}
 }
 
 @Article{Harris2020,
