update wola ref

--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,5 @@
-@book{10.5555/524660,
-author = {Rabiner, Lawrence R.},
+@book{Crochiere1996,
+author = {Crochiere, Rabiner},
 title = {Multirate Digital Signal Processing},
 year = {1996},
 isbn = {0136051626},
