--- a/paper.bib
+++ b/paper.bib
@@ -1,4 +1,4 @@
-@book{Crochiere1996,
+@Book{Crochiere1996,
 author = {Crochiere, Rabiner},
 title = {Multirate Digital Signal Processing},
 year = {1996},
