--- a/paper.bib
+++ b/paper.bib
@@ -165,3 +165,17 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{Kalberla2005,
+  doi = {10.1051/0004-6361:20041864},
+  url = {https://doi.org/10.1051/0004-6361:20041864},
+  year = {2005},
+  month = sep,
+  publisher = {{EDP} Sciences},
+  volume = {440},
+  number = {2},
+  pages = {775--782},
+  author = {P. M. W. Kalberla and W. B. Burton and Dap Hartmann and E. M. Arnal and E. Bajaja and R. Morras and W. G. L. P\"{o}ppel},
+  title = {The Leiden/Argentine/Bonn ({LAB}) Survey of Galactic {HI}},
+  journal = {Astronomy {\&} Astrophysics}
+}
