--- a/paper.bib
+++ b/paper.bib
@@ -1,5 +1,6 @@
 @Book{Crochiere1996,
-author = {Crochiere, Rabiner},
+author = {Ronald E. Crochiere
+and Lawrence R. Rabiner},
 title = {Multirate Digital Signal Processing},
 year = {1996},
 isbn = {0136051626},
