--- a/paper.bib
+++ b/paper.bib
@@ -180,3 +180,18 @@ archivePrefix = {arXiv},
   title = {The Leiden/Argentine/Bonn ({LAB}) Survey of Galactic {HI}},
   journal = {Astronomy {\&} Astrophysics}
 }
+
+@ARTICLE{Pence2010,
+       author = {{Pence}, W.~D. and {Chiappetti}, L. and {Page}, C.~G. and {Shaw}, R.~A. and {Stobie}, E.},
+        title = "{Definition of the Flexible Image Transport System (FITS), version 3.0}",
+      journal = {\aap},
+     keywords = {instrumentation: miscellaneous, methods: miscellaneous, techniques: miscellaneous, reference systems, standards, astronomical databases: miscellaneous},
+         year = 2010,
+        month = dec,
+       volume = {524},
+          eid = {A42},
+        pages = {A42},
+          doi = {10.1051/0004-6361/201015362},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010A&A...524A..42P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
